scripts/hermes_fuzz_executed/fuzz_95_execution
'use strict';
function a(e, r); var r=1;
 
(function (e) {
  (void 0)[0]  
  return function (r) { r = 1; };
})(function (e, r) { r = 1; });


Execution Output ------------------:
test.js:2:17: error: '{' expected in function declaration
function a(e, r); var r=1;
~~~~~~~~~~~~~~~~^
